
  * Added Jamendo support
  * Added network buffer size option in Preferences under Online

2010-08-26 0.2.7
  
  * Double clicking in audioscroble icon in status bar opens AudioScrobble preferences
  * Now Preferences opens where it was closed 
  * Added options to delete tracks from library and drive
  * Implemented reading/writing images into m4a files
  * Library search covers scan now into audio files too
  * Added Jump to Next and Previous albums in playlist
  * Added Album Artist list box to the library tab
  * Improved library browse speed and memory usage
  * Added Now Playing searchs to the shoutcast radios
  * Added in Radio tab the now playing and stream format info
  * Added in Radio tab the option to reorder columns
  * Added option in preferences library tab to add playlists when doing a library scanning
  * Added Thailand translation. Thanks to mr_hangman
  * Added Norwegian translation. Thanks to jente_14
  * Added icelandic translation. Thanks to Hreinsi
  * Added text search in album browser
  * Added support for libre.fm
  * Added Enqueue as Next option so the selection is added as the next track to be played.
  * Implemented crossfading between tracks
  * Read composer, comments from ape and m4a files added
  * Added Lyric support to Ape files
  * Added French translation thanks to Frombenny <frombenny@gmail.com>
  * Now playlist are created for found playlist doing a library scan
  * Added option to show full screen and to hide status bar
  * Implemented live search. Now Enter sends current filtered results to playlist
  * Added a composer listbox to the library tab
  * You can enable to delete the recordings not bigger than a certain amount
    of time in preferences
  * Added a button to record from streams. Need to enable it from Preferences
  * If no lyric is found after showing the error that was not found restore
    the previous lyric text
  * Added option to align text in lyrics
  * Fixed mpris Pause/Play interface